--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -11,3 +11,5 @@
 @using FreelanceManager.Components
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Notifications
