--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -58,3 +58,395 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.align-self-center {
+    align-self: center;
+}
+
+.align-self-end {
+    align-self: flex-end;
+}
+
+.align-self-start {
+    align-self: flex-start;
+}
+
+.divider {
+    height: 1px;
+    background-color: var(--ion-color-lightgrey);
+}
+
+.visibility-hidden {
+    visibility: hidden;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.text-decoration-none {
+    text-decoration: none;
+}
+
+.addPointer {
+    cursor: pointer;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.icon-size-30 {
+    width: 30px !important;
+    height: 30px !important;
+    font-size: 30px;
+}
+
+.icon-size-20 {
+    width: 20px !important;
+    height: 20px !important;
+    font-size: 20px;
+}
+
+.icon-size-18 {
+    width: 18px !important;
+    height: 18px !important;
+    font-size: 18px;
+}
+
+.icon-size-16 {
+    width: 16px !important;
+    height: 16px !important;
+    font-size: 16px;
+}
+
+.icon-size-14 {
+    width: 14px !important;
+    height: 14px !important;
+    font-size: 14px;
+}
+
+.border-radius-5 {
+    border-radius: 5px;
+}
+
+.max-width-1280 {
+    max-width: 1280px;
+}
+
+.pil-5 {
+    padding-inline: 5px;
+}
+
+.pil-16 {
+    padding-inline: 16px;
+}
+
+.pl-6 {
+    padding-left: 6px;
+}
+
+.pl-10 {
+    padding-left: 10px;
+}
+
+.m-0-auto {
+    margin: 0 auto;
+}
+
+.m-2 {
+    margin: 2px;
+}
+
+.m-8 {
+    margin: 8px;
+}
+
+.m-16 {
+    margin: 16px;
+}
+
+.mt-8 {
+    margin-top: 8px;
+}
+
+.mt-16 {
+    margin-top: 16px;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
+.mt-40 {
+    margin-top: 40px;
+}
+
+.mb-4 {
+    margin-bottom: 4px;
+}
+
+.mb-5 {
+    margin-bottom: 5px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mb-16 {
+    margin-bottom: 16px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.ml-16 {
+    margin-left: 16px;
+}
+
+.ml-5 {
+    margin-left: 5px;
+}
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.mr-5 {
+    margin-right: 5px;
+}
+
+.mr-7 {
+    margin-right: 7px;
+}
+
+.mil-5 {
+    margin-inline: 5px;
+}
+
+.mil-10 {
+    margin-inline: 10px;
+}
+
+.mil-16 {
+    margin-inline: 16px;
+}
+
+.p-20 {
+    padding: 20px;
+}
+
+.p-10 {
+    padding: 10px;
+}
+
+.p-4 {
+    padding: 4px;
+}
+
+.fb-400 {
+    font-weight: 400;
+}
+
+.fb-500 {
+    font-weight: 500;
+}
+
+.fb-600 {
+    font-weight: 600;
+}
+
+.fb-700 {
+    font-weight: 700;
+}
+.fb-bold {
+    font-weight: bold;
+}
+
+.fs-12 {
+    font-size: 12px;
+}
+
+.fs-14 {
+    font-size: 14px;
+}
+
+.fs-16 {
+    font-size: 16px;
+}
+
+.fs-18 {
+    font-size: 18px;
+}
+
+.fs-20 {
+    font-size: 20px;
+}
+
+.fs-24 {
+    font-size: 24px;
+}
+
+.fs-26 {
+    font-size: 26px;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+.h100vh {
+    height: 100vh;
+}
+
+.grid {
+    display: grid;
+}
+
+.grid-template-columns-1fr-1col {
+    grid-template-columns: 1fr;
+}
+
+.grid-template-columns-1fr-2col {
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid-template-columns-1fr-3col {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-1 {
+    flex: 1;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.gap-3 {
+    gap: 3px;
+}
+
+.gap-6 {
+    gap: 6px;
+}
+
+.gap-10 {
+    gap: 10px;
+}
+
+.gap-16 {
+    gap: 16px;
+}
+
+.gap-20 {
+    gap: 20px;
+}
+
+.gap-60 {
+    gap: 60px;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.justify-self-center {
+    justify-self: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-start {
+    justify-content: flex-start;
+}
+
+.justify-content-end {
+    justify-content: flex-end;
+}
+
+.justify-content-space-between {
+    justify-content: space-between;
+}
+
+.justify-content-space-around {
+    justify-content: space-around;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.align-items-start {
+    align-items: start;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.position-absolute {
+    position: absolute;
+}
+
+.top-0 {
+    top: 0;
+}
+
+.left-0 {
+    left: 0;
+}
+
+.obj-cover {
+    object-fit: cover;
+}
+
+.width-min-content {
+    width: min-content;
+}
+.color-purple{
+    color: #5f62b7;
+}
+.color-black{
+    color: #1f1f1f;
+}
+.color-darkgrey{
+    color: #606060;
+}
+.bg-color-purple{
+    background-color: #5f62b7;
+}
+.bg-color-black{
+    background-color: #1f1f1f;
+}
+
+.signinup-card {
+    width: 400px;
+    padding: 16px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 2px 4px rgba(255, 255, 255, 0.877);
+    background-color: white;
+}
