--- a/Components/Account/Pages/Register.razor
+++ b/Components/Account/Pages/Register.razor
@@ -80,11 +80,10 @@
 
         Logger.LogInformation("User created a new account with password.");
         statusMessage = "Account created successfully.";
-        var userId = await UserManager.GetUserIdAsync(user);
+        
         var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
-        code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
        
-       await UserManager.ConfirmEmailAsync(user, code);
+       var confRes = await UserManager.ConfirmEmailAsync(user, code);
 
         await SignInManager.SignInAsync(user, isPersistent: false);
         RedirectManager.RedirectTo(ReturnUrl);
