--- a/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -27,7 +27,8 @@ else
         </p>
         <p>
             Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator
+                keys.</a>
         </p>
     </div>
     <div>
@@ -39,9 +40,9 @@ else
 }
 
 @code {
-    private string? message;
+    private string message;
     private ApplicationUser user = default!;
-    private IEnumerable<string>? recoveryCodes;
+    private IEnumerable<string> recoveryCodes;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
