--- a/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/Components/Account/Pages/ConfirmEmailChange.razor
@@ -16,26 +16,26 @@
 <StatusMessage Message="@message" />
 
 @code {
-    private string? message;
+    private string message;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
 
     [SupplyParameterFromQuery]
-    private string? UserId { get; set; }
+    private string UserId { get; set; }
 
     [SupplyParameterFromQuery]
-    private string? Email { get; set; }
+    private string Email { get; set; }
 
     [SupplyParameterFromQuery]
-    private string? Code { get; set; }
+    private string Code { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         if (UserId is null || Email is null || Code is null)
         {
             RedirectManager.RedirectToWithStatus(
-                "Account/Login", "Error: Invalid email change confirmation link.", HttpContext);
+            "Account/Login", "Error: Invalid email change confirmation link.", HttpContext);
         }
 
         var user = await UserManager.FindByIdAsync(UserId);
