--- a/Components/Account/Pages/Manage/DeletePersonalData.razor
+++ b/Components/Account/Pages/Manage/DeletePersonalData.razor
@@ -29,7 +29,8 @@
         @if (requirePassword)
         {
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
+                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control"
+                    autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
                 <label for="Input.Password" class="form-label">Password</label>
                 <ValidationMessage For="() => Input.Password" class="text-danger" />
             </div>
@@ -39,7 +40,7 @@
 </div>
 
 @code {
-    private string? message;
+    private string message;
     private ApplicationUser user = default!;
     private bool requirePassword;
 
