--- a/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/Components/Account/Shared/ExternalLoginPicker.razor
@@ -9,8 +9,9 @@
 {
     <div>
         <p>
-            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-            about setting up this ASP.NET application to support logging in via external services</a>.
+            There are no external authentication services configured. See this <a
+                href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                about setting up this ASP.NET application to support logging in via external services</a>.
         </p>
     </div>
 }
@@ -23,7 +24,8 @@ else
             <p>
                 @foreach (var provider in externalLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name"
+                        title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                 }
             </p>
         </div>
@@ -34,7 +36,7 @@ else
     private AuthenticationScheme[] externalLogins = [];
 
     [SupplyParameterFromQuery]
-    private string? ReturnUrl { get; set; }
+    private string ReturnUrl { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
