--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -7,13 +7,14 @@
 
     <main>
         <div class="top-row px-4">
-            @* <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a> *@
             <AuthorizeView>
-                @context.User.Identity?.Name
+                <div class="color-white">
+                    @context.User.Identity?.Name
+                </div>
             </AuthorizeView>
         </div>
 
-        <article class="content px-4">
+        <article class="content p-16">
             @Body
         </article>
     </main>
