Update login page UI and adjust logo width in landing page

--- a/Components/Pages/LandingPage/LandingPage.razor
+++ b/Components/Pages/LandingPage/LandingPage.razor
@@ -15,7 +15,7 @@
             <div class="container d-flex align-items-center">
                 <!-- Logo -->
                 <a href="#inicio" >
-                    <img src="assets/logo.svg" alt="Logo" class="border-radius-5">
+                    <img src="assets/logo.svg" alt="Logo" class="border-radius-5" style="width: 250px;" />
                 </a>
 
                 <!-- Itens do menu centralizados -->
